--- a/site/index.html
+++ b/site/index.html
@@ -6,5 +6,6 @@
 <body>
 <h1>Annalyce is a beautiful woman and a wonderful girlfriend
 </h1>
+<h2>I really like spending time with her and look forward to living with her in a few short months</h2>
 </body>
 </html>
