--- a/site/index.html
+++ b/site/index.html
@@ -4,8 +4,7 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1>Annalyce is a beautiful woman and a wonderful girlfriend
+<h1>This is for Coursera!
 </h1>
-<h2>I really like spending time with her and look forward to living with her in a few short months</h2>
 </body>
 </html>
