--- a/site/index.html
+++ b/site/index.html
@@ -2,10 +2,20 @@
 <html>
 <head>
 	<title>Hello Coursera!</title>
+<link rel="stylesheet" type="text/css" href="coursera.css"/>
 </head>
 <body>
 	<h1>Hello Coursera!</h1>
 	<h2>I'm learning how to code!</h2>
-	<h3>This is so cool!</h3>
+	<h3><strong><em>This is so cool!</em></strong></h3>
+	<ol>
+		<li>I can use it in my job</li>
+		<li>I will open up other job opportunities</li>
+		<li>Annalyce will be impressed :)</li>
+	</ol>
+	<Section>Section 1
+<Article>HTML Basics</Article>
+<Article>CSS Basics</Article>
+	</Section>
 </body>
 </html>
