--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -3,8 +3,26 @@
 <head>
 	<title>Module 2 Solution</title>
 	<link rel="stylesheet" type="text/css" href="/module2solution.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1>Restaurant Menu</h1>
+<h1>Our Menu</h1>
+<div class="row">
+<div class="col-lg-4 col-md-6 col-sm-12">
+<div class="d1"><p class="p1">Chicken</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
+</div>
+</div>
+<div class="col-lg-4 col-md-6 col-sm-12">
+<div class="d2"><p class="p2">Beef</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
+</div>
+</div>
+<div class="col-lg-4 col-md-12 col-sm-12">
+<div class="d3"><p class="p3">Sushi</p>
+<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
+</div>
+</div>
+</div>
 </body>
 </html>
