--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Module 2 Solution</title>
-	<link rel="stylesheet" type="text/css" href="/module2solution.css">
+	<link rel="stylesheet" type="text/css" href="module2solution.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
