--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -4,12 +4,14 @@
 	<title>Module 2 Solution</title>
 	<link rel="stylesheet" type="text/css" href="module2solution.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<script type="text/javascript">(function() {var walkme = document.createElement('script'); walkme.type = 'text/javascript'; walkme.async = true; walkme.src = 'https://cdn.walkme.com/users/f357ef5b196d45f89bc619eb99963e1d/walkme_f357ef5b196d45f89bc619eb99963e1d_https.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(walkme, s); window._walkmeConfig = {smartLoad:true}; })();</script>
+
 </head>
 <body>
 <h1>Our Menu</h1>
 <div class="row">
 <div class="col-lg-4 col-md-6 col-sm-12">
-<div class="d1"><p class="p1">Chicken</p>
+<div class="d1"><p class="p1" onclick="WalkMeAPI.startFlowById(273099);">Chicken</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
 </div>
 </div>
