--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
 	<title>Module 2 Solution</title>
 	<link rel="stylesheet" type="text/css" href="module2solution.css">
