--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -4,8 +4,12 @@
 	<title>Module 2 Solution</title>
 	<link rel="stylesheet" type="text/css" href="module2solution.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<!--Start of WalkMe Snippet -->
 	<script type="text/javascript">(function() {var walkme = document.createElement('script'); walkme.type = 'text/javascript'; walkme.async = true; walkme.src = 'https://cdn.walkme.com/users/018ed64946a8435391746441391deea2/walkme_018ed64946a8435391746441391deea2_https.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(walkme, s); window._walkmeConfig = {smartLoad:true}; })();</script>
-	
+	<!--End of WalkMe Snippet -->
+	<!-- Start of devinhelp Zendesk Widget script -->
+<script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=3a2e0d24-fadb-4f97-8f95-71750606a4e0"> </script>
+<!-- End of devinhelp Zendesk Widget script -->
 
 </head>
 <body>
