--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -21,7 +21,7 @@
 </div>
 </div>
 <div class="col-lg-4 col-md-6 col-sm-12">
-<div class="d2"><p class="p2">Beef</p>
+<div class="d2"><p class="p2" onclick="WalkMeAPI.startContentById(163685);">Beef</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
 </div>
 </div>
