--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -27,7 +27,9 @@
 </div>
 </div>
 <div class="col-lg-4 col-md-12 col-sm-12">
-<div class="d3"><p class="p3">Sushi</p>
+<div class="d3"><p class="p3" onclick="if (WalkMePlayerAPI.isMenuOpen() == false) {
+    WalkMePlayerAPI.toggleMenu();
+}">Sushi</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
 </div>
 </div>
