--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -2,18 +2,27 @@
 <html lang="en">
 <head>
 	<title>Module 2 Solution</title>
+	<!-- Google Tag Manager -->
+<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-KLGJN53');</script>
+<!-- End Google Tag Manager -->
 	<link rel="stylesheet" type="text/css" href="module2solution.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!--Start of WalkMe Snippet -->
-	<script type="text/javascript">(function() {var walkme = document.createElement('script'); walkme.type = 'text/javascript'; walkme.async = true; walkme.src = 'https://cdn.walkme.com/users/018ed64946a8435391746441391deea2/walkme_018ed64946a8435391746441391deea2_https.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(walkme, s); window._walkmeConfig = {smartLoad:true}; })();</script>
-	<!--End of WalkMe Snippet -->
-
+<script src="script.js"></script>
 	<!-- Start of devinhelp Zendesk Widget script -->
 <script id="ze-snippet" src="https://static.zdassets.com/ekr/snippet.js?key=3a2e0d24-fadb-4f97-8f95-71750606a4e0"> </script>
 <!-- End of devinhelp Zendesk Widget script -->
 
 </head>
 <body>
+	<!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLGJN53"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+	<script>console.log(lang);</script>
 <h1>Our Menu</h1>
 <div class="row">
 <div class="col-lg-4 col-md-6 col-sm-12">
