--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -12,7 +12,14 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 	<link rel="stylesheet" type="text/css" href="module2solution.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <script src="script.js"></script>
-
+<!--Intercom Script-->
+<script>
+  window.intercomSettings = {
+    app_id: "zfbq7oti"
+  };
+</script>
+<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/zfbq7oti';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
+<!--End Intercom Script-->
 </head>
 <body>
 	<!-- Google Tag Manager (noscript) -->
