--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -48,7 +48,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 </div>
 </div>
 <footer>
-	<button type="button">Help</button>
+	<button type="button" 	WalkMeAPI.startFlowById(333660)>Help</button>
 </footer>
 </body>
 </html>
