--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -2,53 +2,32 @@
 <html lang="en">
 <head>
 	<title>Module 2 Solution</title>
-	<!-- Google Tag Manager -->
-<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
-new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
-j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
-'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
-})(window,document,'script','dataLayer','GTM-KLGJN53');</script>
-<!-- End Google Tag Manager -->
-	<link rel="stylesheet" type="text/css" href="module2solution.css">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-<script src="script.js"></script>
-<!--Intercom Script-->
-<script>
-  window.intercomSettings = {
-    app_id: "zfbq7oti"
-  };
-</script>
-<script>(function(){var w=window;var ic=w.Intercom;if(typeof ic==="function"){ic('reattach_activator');ic('update',intercomSettings);}else{var d=document;var i=function(){i.c(arguments)};i.q=[];i.c=function(args){i.q.push(args)};w.Intercom=i;function l(){var s=d.createElement('script');s.type='text/javascript';s.async=true;s.src='https://widget.intercom.io/widget/zfbq7oti';var x=d.getElementsByTagName('script')[0];x.parentNode.insertBefore(s,x);}if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})()</script>
-<!--End Intercom Script-->
+	<!-- WalkMe Snippet-->
+<script type="text/javascript">(function() {var walkme = document.createElement('script'); walkme.type = 'text/javascript'; walkme.async = true; walkme.src = 'https://cdn.walkme.com/users/ec9ed34d32184221a0e1f55eef677346/walkme_ec9ed34d32184221a0e1f55eef677346_https.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(walkme, s); window._walkmeConfig = {smartLoad:true}; })();</script>
+<!--End WalkMe Snippet-->
 </head>
 <body>
-	<!-- Google Tag Manager (noscript) -->
-<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-KLGJN53"
-height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-<!-- End Google Tag Manager (noscript) -->
-	<script>console.log(lang);</script>
+	
 <h1>Our Menu</h1>
 <div class="row">
 <div class="col-lg-4 col-md-6 col-sm-12">
-<div class="d1"><p class="p1" onclick="WalkMeAPI.startFlowById(272481);">Chicken</p>
+<div class="d1"><p class="p1">Chicken</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
 </div>
 </div>
 <div class="col-lg-4 col-md-6 col-sm-12">
-<div class="d2"><p class="p2" onclick="WalkMeAPI.startContentById(197534);">Beef</p>
+<div class="d2"><p class="p2">Beef</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
 </div>
 </div>
 <div class="col-lg-4 col-md-12 col-sm-12">
-<div class="d3"><p class="p3" onclick="if (WalkMePlayerAPI.isMenuOpen() == false) {
-    WalkMePlayerAPI.toggleMenu();
-}">Sushi</p>
+<div class="d3"><p class="p3">Sushi</p>
 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia distinctio aliquid cupiditate perferendis fuga, sit quasi alias vero sunt non, ratione earum dolores nihil! Consequuntur pariatur totam incidunt soluta expedita.</p>
 </div>
 </div>
 </div>
 <footer>
-	<button type="button" 	onclick="WalkMeAPI.startFlowById(333660)">Help</button>
+	<button>Help</button>
 </footer>
 </body>
 </html>
