--- a/Assignments/module2solution.index.html
+++ b/Assignments/module2solution.index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 <head>
 	<title>Module 2 Solution</title>
+<link rel="stylesheet" type="text/css" href="module2solution.css">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- WalkMe Snippet-->
 <script type="text/javascript">(function() {var walkme = document.createElement('script'); walkme.type = 'text/javascript'; walkme.async = true; walkme.src = 'https://cdn.walkme.com/users/ec9ed34d32184221a0e1f55eef677346/walkme_ec9ed34d32184221a0e1f55eef677346_https.js'; var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(walkme, s); window._walkmeConfig = {smartLoad:true}; })();</script>
 <!--End WalkMe Snippet-->
